Fixed legend spacing

--- a/src/main/resources/static/css/overview.css
+++ b/src/main/resources/static/css/overview.css
@@ -27,10 +27,12 @@
 }
 
 .legend-wrapper {
-    margin-top: 3em;
+    /*margin-top: 3em;*/
+    height: 12em;
     display: grid;
     grid-template: repeat(6, 1fr) / 2em 1fr;
     align-items: center;
+    align-self: end;
 }
 
 .color-box {
